--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
+  "protection_flags" : ["pepper", "totp", "captcha", "rate_limit", "account_lockout"],
   "algo_type": "sha256",
   "rate_limit": "5/minute",
-  "protection_flags" : ["pepper", "totp", "captcha"]
+  "captcha_threshold": 8,
+  "lockout_threshold": 3,
+  "lockout_duration_secs": 60
 }
